# FAF_Android

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/pragmatsoft/faf/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AACEncoder.cpp  AACEncoder.h  AudioDataCallback.h  AudioEngine.cpp  AudioEngine.h  AudioStreamErrorHandler.h  CMakeLists.txt  GainProcessor.h  PcmRingBuffer.h  native-lib.cpp
app/src/main/java/com/pragmatsoft/faf/: FAFApplication.kt
app/src/main/java/com/pragmatsoft/faf/audio/: AudioService.kt  GetPreferredInputDeviceUseCase.kt  NativeWrapper.kt
app/src/main/java/com/pragmatsoft/faf/di/: CommonModule.kt
app/src/main/java/com/pragmatsoft/faf/ui/: MainActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-be/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/pragmatsoft/faf/: ExampleUnitTest.kt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt  website.txt
fastlane/metadata/android/ru/: full_description.txt  short_description.txt  title.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+25 files in other folders)
